<resources>
    <string name="app_name">GitHubRepositoriesObserver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_text">Repositories</string>
    <string name="sing_in_button">SING IN</string>
    <string name="personal_access_token">Personal access token</string>
    <string name="text_error">Ошибка</string>
    <string name="button_error">Обновить страницу</string>
    <string name="loading">loading...</string>
    <string name="license">License</string>
    <string name="licensekey">License-Key</string>
    <string name="stars_number">10</string>
    <string name="star">stars </string>
    <string name="forks_number">10</string>
    <string name="forks">forks </string>
    <string name="watchers_number">10</string>
    <string name="watchers">watchers</string>
    <string name="description">description...</string>
    <string name="description_empty">description empty...</string>
</resources>