<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout_star_fork_watcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/star_image"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/star_yellow">

        </ImageView>

        <TextView
            android:id="@+id/stars_number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stars_number">

        </TextView>

        <TextView
            android:id="@+id/stars"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star">

        </TextView>

        <ImageView
            android:id="@+id/fork_image"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fork">

        </ImageView>

        <TextView
            android:id="@+id/forks_number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forks_number">

        </TextView>

        <TextView
            android:id="@+id/fork"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forks">

        </TextView>

        <ImageView
            android:id="@+id/watchers_image"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/watchers">

        </ImageView>

        <TextView
            android:id="@+id/watchers_number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watchers_number">

        </TextView>

        <TextView
            android:id="@+id/watchers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watchers">

        </TextView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>