<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.RepositoryInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar_detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/name_repository"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/toolbar_text"
            android:textColor="#DAD6D6"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/log_out_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_info">

    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:id="@+id/container_error"
        android:background="@color/black"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="false">

        <TextView
            android:text="@string/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:background="@color/white" />


        <Button
            android:text="@string/button_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_error"
            android:layout_marginTop="16dp"
            app:iconTint="@color/black"
            android:background="@color/white"
            app:rippleColor="@color/black"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="false">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/git_logo"
            android:id="@+id/imageView_loading"
            android:contentDescription="@string/loading"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>